[+] plxShow: ajout de la méthode artCatIds()
[+] plxShow: ajout de la méthode artActiveCatId()
[+] plxShow:pageTitle() : positionnement du titre du site en dernier pour améliorer les référencements (contribution Jos)
[+] plxShow:pagination() : suppression duplicate content entre la page1 et la page d'accueil
[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[+] plxPlugin: ajout de la fonction setAdminMenu pour personnaliser le menu permettant d'accèder à la page admin.php d'un plugin
[+] Administration: sidebar statique
[+] Administration: Edition article : ajout du champ "Lien de l'article" et du lien "voir" pour accéder à l'article
[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins
[+] Administration: Paramètres > Configuration avancée -> Ajout du choix de l'emplacement des fichiers de configuration (dossier)
[+] Administration: Paramètres > Options d'affichage > Éditer les fichiers du thème : edition des fichiers dans les sous-dossiers
[+] Administration: Catégories > Options : ajout du paramètre "Afficher les articles de cette catégorie sur la page d'accueil" (oui/non)
[+] Administration: Gestionnaire de médias: tri des dossiers dans le déroulant 'Dossier'
[+] Administration: Ajout du paramètre thumbs dans le fichier de configuration de PluXml pour création ou pas des miniatures
[+] Amélioration de la traduction en allemand (contribution Jürgen K.)
[-] Suppression du thème mobile.defaut
[-] plxShow: suppression de la méthode artCatId()
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
[-] plxUtils::showMsg : suppression des balises <strong> (contribution danielsan)
BUG Pas d'affichage des articles affectés à plusieurs catégories si une catégorie est inactive
BUG Pas de récupération des infos dans le fichier infos.xml d'un plugin sur l'écran admin.php du plugin
BUG sitemap: mauvais format de date dans la balise lastmod